--- a/hello.html
+++ b/hello.html
@@ -7,6 +7,7 @@
     <title>git hub</title>
 </head>
 <body>
-    <h1>THIS IS GIT HUB PAGE!</h1>
+    <h1>WELCOME TO MY PAGE</h1>
+    <p>THIS IS GIT HUB PAGE!</P>
 </body>
 </html>
