--- a/hello.html
+++ b/hello.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>git hub</title>
+    <title>git hub</title> 
 </head>
 <body>
     <h1>WELCOME TO MY PAGE</h1>
+    <h2>THIS SECOND HEADING </h2>
     <p>THIS IS GIT HUB PAGE!</P>
 </body>
 </html>
