--- a/hello.html
+++ b/hello.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>WELCOME TO MY PAGE</h1>
-    <h2 style="color:red;">THIS SECOND HEADING </h2>
+    <h2 style="color:blue;">THIS SECOND HEADING </h2>
     <p>THIS IS GIT HUB PAGE!</P>
 </body>
 </html>
